test/asm/string-concat.err
warning: string-concat.asm(21): [-Wobsolete]
    Treating strings as numbers is deprecated
warning: string-concat.asm(21): [-Wobsolete]
    Treating strings as numbers is deprecated
error: string-concat.asm(25):
    syntax error, unexpected ++
error: string-concat.asm(26):
    syntax error, unexpected ++, expecting ] or + or -
Assembly aborted with 2 errors!
